*Added IRODSPasswordUtilities with an implementation of iRODS password obfuscation routines.
*Work in progress, not yet completed, on modify user password from user and admin perspectives.  Need to finish implementing the admin-side obfuscation per
fixme's in UserAOImplTest
*Added cache of iRODS challenge during sign-on for later use in obfuscation routines, see IRODSCommands

********* TODO ***************


$2 = {
  cmd = "hello\000PI_REQ\000\000\000\000Mapping\n# FNM pr?", '\0' <repeats 11 times>, "z\002\000\000 from an external function name (logical)\n# to  an internal function name. \n# Each mapping consists of two parts separated by  |.\n# The three parts are: "..., 
  cmdArgv = '\0' <repeats 99999 times>, 
  execAddr = '\0' <repeats 255 times>, 
  hintPath = '\0' <repeats 1087 times>, 
  addPathToArgv = 0, 
  condInput = {
    len = 5286176, 
    keyWord = 0x10050a2d0, 
    value = 0x0
  }
}
(gdb) print *execCmdInp.condInput
Structure has no component named operator*.
(gdb) print *execCmdInp->condInput
Structure has no component named operator*.
(gdb) print execCmdInp->condInput->keyWord
$3 = (char **) 0x10050a2d0
(gdb) print *execCmdInp->condInput->keyWord
$4 = 0x10050a320 ""
(gdb) print execCmdInp->*condInput          
No symbol "condInput" in current context.
(gdb) print *execCmdInpt->condInput.keyWord
No symbol "execCmdInpt" in current context.
(gdb) print *execCmdInp->*condInput        
No symbol "condInput" in current context.
(gdb) print *execCmdInp->condInput 
Structure has no component named operator*.
(gdb) print execCmdInp->condInput
$5 = {
  len = 5286176, 
  keyWord = 0x10050a2d0, 
  value = 0x0
}
(gdb) print execCmdInp->condInput.keyWord
$6 = (char **) 0x10050a2d0
(gdb) print **execCmdInp->condInput.keyWord
$7 = 0 '\0'
KK(gdb) (gdb) 


*null value in unspecified AVU elements?  check unit tests, am I putting the String 'null' in there?
*fix seek to use new api
*AVU modify method
*method to count subdirs, add group by to query processing