@@ -39,7 +39,7 @@ public interface DataObjectAO extends IRODSAccessObject {
 
 	/**
 	 * Put a local file to IRODS.  This method will operate using any defaults in 
-	 * the <code>JargonProperties</code>.
+	 * the <code>JargonProperties</code> to control things like behavior of parallel transfers.
 	 * 
 	 * @param localFile
 	 *            <code>java.io.File</code> containing the data to go to IRODS
